# opencl-tutorial

./: CMakeLists.txt  README.md
exec/: CMakeLists.txt  cl_info.cc  matmul_test.cc  matrix.hpp  utils.hpp
ocl/: buffer.hpp  command_queue.hpp  common.h  context.hpp  device.hpp  kernel.hpp  ocl.h  platform.hpp  program.hpp
ocl/kernels/: matmul.cl  matmul_v2.cl  memcpy.cl
